--- a/table/table5.html
+++ b/table/table5.html
@@ -7,9 +7,9 @@
     <body>
         <div id="app">
                 <template>
-                    <el-table :data="tableData" border=true stripe=true style="width:720" height=480>
-                        <el-table-column fiexd prop="date" label="日期" width='120'></el-table-column>
-                        <el-table-column fiexd prop="name" label="姓名" width="120"></el-table-column>
+                    <el-table :data="tableData" border=true stripe=true style="width:460" height=480>
+                        <el-table-column fixed prop="date" label="日期" width='120'></el-table-column>
+                        <el-table-column fixed prop="name" label="姓名" width="120"></el-table-column>
                         <el-table-column prop="province" label="省份" width="120"></el-table-column>
                         <el-table-column prop="city" label="城市" width="120"></el-table-column>
                         <el-table-column prop="address" label="地址" width="120"></el-table-column>
