--- a/dialog/dialog1.html
+++ b/dialog/dialog1.html
@@ -7,6 +7,11 @@
     <body>
         <div id="app">
            <el-button type="text" @click="open"> Message Box</el-button>
+           <el-form :model='dialogform'>
+                <el-form-item label="活动名称" :label-width="formlabelWidth">
+                    <el-input ></el-input>
+                </el-form-item>
+           </el-form>
         </div>
 
         <script src="https://cdn.bootcss.com/vue/2.5.17-beta.0/vue.min.js"></script>
